# docker-dev-env

./: genenv.py  pyproject.toml
docker/nginx/: Dockerfile  entrypoint.sh
docker/rsyslog/: rsyslog.conf
sql/: clickhouse-nginx.sql
templates/: docker-compose.yaml.j2  vector.toml.j2
templates/docker/nginx_vector/: Dockerfile.j2
templates/docker/rsyslog/: Dockerfile
templates/vector-nginx-clickhouse/: docker-compose.yaml.j2  nginx.conf.j2  vector.toml.j2
