[tool.poetry]
name = "docker-dev-env"
version = "0.1.0"
description = ""
authors = ["b40yd <bb.qnyd@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.13.0"
jinja2 = "^3.1.4"
toml = "^0.10.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
